--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "dependencies": {
     "compression": "^1.6.2",
     "express": "^4.15.2",
+    "mongoose": "^4.9.2",
+    "secp256k1": "^3.2.5",
     "serve-static": "^1.12.1"
   },
   "devDependencies": {
     "@types/compression": "0.0.33",
     "@types/express": "^4.0.35",
+    "@types/mongoose": "^4.7.9",
     "@types/serve-static": "^1.7.31"
   }
 }
