--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
   "homepage": "https://github.com/bentemplin/gatekeeper-server#readme",
   "dependencies": {
     "compression": "^1.6.2",
+    "connect-mongo": "^1.3.2",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
     "mongoose": "^4.9.2",
     "secp256k1": "^3.2.5",
-    "serve-static": "^1.12.1"
+    "serve-static": "^1.12.1",
+    "slug": "^0.9.1"
   },
   "devDependencies": {
     "@types/compression": "0.0.33",
+    "@types/connect-mongo": "0.0.32",
     "@types/express": "^4.0.35",
+    "@types/express-session": "0.0.32",
     "@types/mongoose": "^4.7.9",
-    "@types/serve-static": "^1.7.31"
+    "@types/serve-static": "^1.7.31",
+    "@types/slug": "^0.9.0"
   }
 }
