--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/bentemplin/gatekeeper-server#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
     "express": "^4.15.2",
@@ -27,6 +28,7 @@
     "slug": "^0.9.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.16.3",
     "@types/compression": "0.0.33",
     "@types/connect-mongo": "0.0.32",
     "@types/express": "^4.0.35",
